--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 
+# Ignore the seeds file
+/db/seeds.rb
+
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
